# AlturTest

./: .dockerignore  .env.docker.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
backend/src/app/: __init__.py  config.py  main.py
backend/src/app/calls/: analysis_insights.py  models.py  repository.py  routes.py  schemas.py  service.py  storage.py
backend/src/app/worker/: __init__.py  __main__.py  llm.py  processor.py  repository.py  service.py  stt.py
backend/supabase/: config.toml
backend/supabase/migrations/: 20260708232058_initial_call_schema.sql  20260709010000_add_call_ingestion_idempotency.sql  20260709020000_add_call_provider_attempts.sql
backend/tests/: test_calls_api.py  test_health.py  test_supabase_integration.py  test_worker.py
docs/: AGENTS.md  ARCHITECTURE.md  INTERVIEW_ANSWERS.md
frontend/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  index.html  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.css  (+2 more)
holdout/: AGENTS.md  README.md  pyproject.toml
holdout/actual_outputs/baseline/: angry_customer_escalation.json  damaged_order_refund.json
holdout/expected/: README.md  angry_customer_escalation.json  damaged_order_refund.json
holdout/public_cases/: angry_customer_escalation.json  damaged_order_refund.json
holdout/reports/: baseline.json
holdout/scoring/: README.md
holdout/src/holdout_evaluator/: __init__.py  __main__.py  cli.py  evaluator.py
holdout/tests/: test_evaluator_smoke.py
(+1 files in other folders)
