[project]
name = "altur-backend"
version = "0.1.0"
description = "Backend API for Altur Call Analyzer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "pydantic-settings>=2.10.0",
    "uvicorn[standard]>=0.35.0",
]

[tool.uv]
package = true
dev-dependencies = [
    "httpx>=0.28.0",
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
